--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/your_database
 spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.config-location=classpath:mybatis-config.xml
+# Domain Aliases
+mybatis.type-aliases-package=com.fastshoppers.model
