--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # sample
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:mysql://localhost:3307/fast-shoppers-db
+spring.datasource.username=root
+spring.datasource.password=fast-shoppers
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis
@@ -10,3 +10,9 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
 # Domain Aliases
 mybatis.type-aliases-package=com.fastshoppers.model
+#hibernate_show_sql option
+spring.jpa.properties.hibernate.show_sql=true
+#hibernate_format_option
+spring.jpa.properties.hibernate.format_sql=true
+#ddl_auto => create
+spring.jpa.hibernate.ddl-auto=create
