chore : Add localtest setting at application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl_auto => create
 spring.jpa.hibernate.ddl-auto=create
+
+# Need to Add VmOption -Dspring.profiles.active=localtest
+spring.profiles.active=localtest
+
+# for local-test - test DB Setting
+spring.datasource.localtest.url=jdbc:h2:mem:testdb
+spring.datasource.localtest.driverClassName=org.h2.Driver
+spring.datasource.localtest.username=root
+spring.datasource.localtest.password=fast-shoppers
