--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'com.palantir.docker' version '0.35.0'
+	id 'jacoco'
 }
 
 group = 'com.fastshoppers'
@@ -36,3 +37,20 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.60
+			}
+		}
+	}
+}
+
+jacocoTestReport {
+	dependsOn test
+	finalizedBy 'jacocoTestCoverageVerification'
+}
+
+check.dependsOn jacocoTestCoverageVerification
