chore : Add redis host, port and jwt secret key at application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.datasource.localtest.url=jdbc:h2:mem:testdb
 spring.datasource.localtest.driverClassName=org.h2.Driver
 spring.datasource.localtest.username=root
 spring.datasource.localtest.password=fast-shoppers
+
+#jwt key
+jwt.secret=abcdefghijklmnopqrstuvwxyz1234567890thisissecretkey
+
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
