--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-
 # sample
 spring.datasource.url=jdbc:mysql://localhost:3307/fast-shoppers-db
 spring.datasource.username=root
 spring.datasource.password=fast-shoppers
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:mybatis-config.xml
@@ -16,19 +14,20 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl_auto => create
 spring.jpa.hibernate.ddl-auto=create
-
 # Need to Add VmOption -Dspring.profiles.active=localtest
 spring.profiles.active=localtest
-
 # for local-test - test DB Setting
 spring.datasource.localtest.url=jdbc:h2:mem:testdb
 spring.datasource.localtest.driverClassName=org.h2.Driver
 spring.datasource.localtest.username=root
 spring.datasource.localtest.password=fast-shoppers
-
 #jwt key
 jwt.secret=abcdefghijklmnopqrstuvwxyz1234567890thisissecretkey
-
+# refresh-token-expire-seconds - 7 days
+token.refresh.expiry.milliseconds=604800000 
+# access-token-expire-seconds - 1 hour
+token.access.expiry.milliseconds=604800000 
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
