--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.datasource.localtest.password=fast-shoppers
 jwt.secret=abcdefghijklmnopqrstuvwxyz1234567890thisissecretkey
 # refresh-token-expire-seconds - 7 days
 token.refresh.expiry.milliseconds=604800000 
-# access-token-expire-seconds - 1 hour
-token.access.expiry.milliseconds=604800000 
+# access-token-expire-seconds - 30 minutes
+token.access.expiry.milliseconds=1800000
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
