--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -38,6 +38,16 @@ jobs:
       - name: 도커 컴포즈 환경 정리
         run: docker-compose -f docker-compose.yml down
 
+      - name: MySQL 컨테이너 중지 및 제거
+        run: |
+          docker stop mysql-container
+          docker rm mysql-container
+
+      - name: 레디스 컨테이너 중지 및 제거
+        run: |
+          docker stop redis-container
+          docker rm redis-container
+
       - name: 도커 컴포즈 셋업
         run: docker-compose -f docker-compose.yml up -d
 
