--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -14,6 +14,7 @@ jobs:
     services:
       mysql:
         image: mysql:latest
+        container_name: mysql-container
         env:
           MYSQL_ROOT_PASSWORD: fast-shoppers
           MYSQL_DATABASE: fast-shoppers-db
@@ -21,6 +22,7 @@ jobs:
           - 3307:3306
       redis:
         image: redis:latest
+        container_name: redis-container
         ports:
           - 6379:6379
 
@@ -43,13 +45,13 @@ jobs:
 
       - name: MySQL 컨테이너 중지
         run: |
-          docker stop mysql:latest
-          docker rm mysql:latest
+          docker stop mysql-container
+          docker rm mysql-container
 
       - name: 레디스 컨테이너 중지 및 제거
         run: |
-          docker stop redis:latest
-          docker rm redis:latest
+          docker stop redis-container
+          docker rm redis-container
 
       - name: 도커 컴포즈 셋업
         run: docker-compose -f docker-compose.yml up -d
@@ -71,9 +73,9 @@ jobs:
 
       - name: 코멘트 추가
         uses: unsplash/comment-on-pr@v1.3.0
-        if: success() || failure()
+        if: failure()
         with:
-          msg: '테스트 결과!'
+          msg: '테스트 실패: 원인을 확인하세요.'
           check_for_duplicate_msg: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
