chore: Update coupon lock and stock key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,5 @@ token.access.expiry.milliseconds=1800000
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-
+coupon.stock.key=coupon:stock:
+coupon.lock.key=coupon:lock:
