chore: Add spring boot starter actuator and prometheus dependency

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ ext {
 }
 
 bootRun {
-	if (project.hasProperty('profile')) {
-		args = ["--spring.profiles.active=${profile}"]
-	}
+    if (project.hasProperty('profile')) {
+        args = ["--spring.profiles.active=${profile}"]
+    }
 }
 
 dependencies {
@@ -41,6 +41,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.boot:spring-boot-starter-data-redis"
     implementation "org.redisson:redisson-spring-boot-starter:${redissonVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     compileOnly "org.projectlombok:lombok"
     developmentOnly "org.springframework.boot:spring-boot-devtools"
     runtimeOnly "com.mysql:mysql-connector-j"
@@ -48,6 +51,7 @@ dependencies {
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework.security:spring-security-test"
     testImplementation "com.h2database:h2"
+
 }
 
 tasks.named('test') {
