chore: Add enpoint exposure config

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,14 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost:3307/fast-shoppers-db
 spring.datasource.username=root
 spring.datasource.password=fast-shoppers
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 #hibernate_show_sql option
 spring.jpa.properties.hibernate.show_sql=true
 #hibernate_format_option
 spring.jpa.properties.hibernate.format_sql=true
 #ddl_auto => create
 spring.jpa.hibernate.ddl-auto=create
-
 # for local-test - test DB Setting
 spring.datasource.localtest.url=jdbc:h2:mem:testdb
 spring.datasource.localtest.driverClassName=org.h2.Driver
@@ -25,4 +23,6 @@ token.access.expiry.milliseconds=1800000
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# end point expose
+management.endpoints.web.exposure.include=prometheus,health,info
 
