--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,23 @@ services:
     container_name: redis-container
     ports:
       - "6379:6379"
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus-container
+    volumes:
+      - ./prometheus:/etc/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    depends_on:
+      - mysql
+      - redis
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana-container
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
