chore: Modify test properties location and values

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,9 +4,17 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl_auto => create
 spring.jpa.hibernate.ddl-auto=create
-
 # for local-test - test DB Setting
 spring.datasource.localtest.url=jdbc:h2:mem:testdb
 spring.datasource.localtest.driverClassName=org.h2.Driver
 spring.datasource.localtest.username=root
 spring.datasource.localtest.password=fast-shoppers
+# redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+#jwt key
+jwt.secret=abcdefghijklmnopqrstuvwxyz1234567890thisissecretkey
+# refresh-token-expire-seconds - 7 days
+token.refresh.expiry.milliseconds=604800000 
+# access-token-expire-seconds - 30 minutes
+token.access.expiry.milliseconds=1800000
